bisa edit delete golongan

--- a/templates/lhe/create_lhe_bab2_c_pkb.html
+++ b/templates/lhe/create_lhe_bab2_c_pkb.html
@@ -411,7 +411,8 @@
                             </tr>
                             <tr>
                                 <td colspan="2">
-                                    <button type="submit" class="small btn btn-success">Update Periode</button>
+                                    <button type="submit" class="small btn btn-success">Update Periode</button><br>
+                                    <p class="small" style="font-style: italic;font-weight: bold;">*perubahan update akan menghapus data sebelumnya</p>
                                 </td>
                             </tr>
                         </table>
