--- a/templates/lhe/create_lhe_bab2_c_pap.html
+++ b/templates/lhe/create_lhe_bab2_c_pap.html
@@ -356,7 +356,8 @@
                             </tr>
                             <tr>
                                 <td colspan="2">
-                                    <button type="submit" class="small btn btn-success">Update Periode Tahun Pertama PAP</button>
+                                    <button type="submit" class="small btn btn-success">Update Periode Tahun Pertama PAP</button><br>
+                                    <p class="small" style="font-style: italic;font-weight: bold;">*perubahan update akan menghapus data sebelumnya</p>
                                 </td>
                             </tr>
                         </table>
@@ -381,7 +382,8 @@
                             </tr>
                             <tr>
                                 <td colspan="2">
-                                    <button type="submit" class="small btn btn-success">Update Periode Tahun Kedua PAP</button>
+                                    <button type="submit" class="small btn btn-success">Update Periode Tahun Kedua PAP</button><br>
+                                    <p class="small" style="font-style: italic;font-weight: bold;">*perubahan update akan menghapus data sebelumnya</p>
                                 </td>
                             </tr>
                         </table>
