--- a/templates/master/display_dasarst.html
+++ b/templates/master/display_dasarst.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block contents%}
+{% csrf_token %}
 <div style="text-wrap: wrap; overflow-x: scroll;">
 <table class="table  table-hover">
     <thead class="table-secondary">
@@ -10,7 +11,7 @@
         <th style="width:300px">Keterangan</th>
         <th style="width:200px">Updated By</th>
         <th style="width:300px">Updated At</th>
-        <th style="width:200px"</th>
+        <th style="width:200px"></th>
     </thead>
     {% for list in lists%}
     <tr>
@@ -20,8 +21,8 @@
         <td>{{list.updatedBy}}</td>
         <td>{{list.updatedAt}}</td>
         <td>
-            <a class="btn" data-toggle="modal" data-target="#editModal"><i class="fa fa-user-edit"></i></a>
-            <a class="btn" data-toggle="modal"  onclick="deleteDasarSurat('{{list.kode_dasar}}','{{list.keterangan}}')"><i class="fa fa-trash"></i></a>
+            <a class="btn"><i class="fa fa-user-edit" id="edit{{list.kode_dasar}}" data-bs-keterangan="{{list.keterangan}}" onclick="editDasarST('{{list.kode_dasar}}')"></i></a>
+            <a class="btn"><i class="fa fa-trash" id="del{{list.kode_dasar}}" data-bs-keterangan="{{list.keterangan}}" onclick="deleteDasarST('{{list.kode_dasar}}')"></i></a>
         </td>
     </tr>
     {% endfor%}
@@ -35,59 +36,188 @@
 </div>
 
 <!-- Edit Modal-->
-    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit Master Golongan</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Detail Master Golongan</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Tutup</button>
-                </div>
+<!-- Modal Body -->
+<!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
+<div
+    class="modal fade"
+    id="editModal"
+    tabindex="-2"
+    
+    role="dialog"
+    aria-labelledby="Update Master Dasar Surat Tugas"
+    aria-hidden="true"
+>
+    <div
+        class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg"
+        role="document"
+    >
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title h3" id="modalTitleId">
+                    Melakukan Edit Master Dasar Surat Tugas
+                </h5>
+                <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                ></button>
+            </div>
+            <div class="modal-body">
+                <table style="width: 100%;">
+                    <thead>
+                        <th>Kode Master Surat Tugas:</th>
+                        <th><span id="kodeEditDasarST"></span></th>
+                    </thead>
+                    <tr>
+                        <th>Keterangan Dasar Surat Tugas Lama:</th>
+                        <td><span id="keteranganEditDasarST"></span></td>
+                    </tr>
+                    <tr>
+                        <th>Keterangan Dasar Surat Tugas Baru:</th>
+                        <td><input type="text" id="keteranganEditBaru" class="form-control" required/></td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="modal-footer">
+                <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-bs-dismiss="modal"
+                >
+                    Close
+                </button>
+                <button type="button" class="btn btn-success" onclick="updateNow()">Update</button>
             </div>
         </div>
     </div>
+</div>
+
 
 <!-- Delete Modal-->
-    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Delete Master Golongan</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>Apakah benar akan menghapus Data Master ini?</p>
-                    <p>Kode Dasar Surat: <span id="del_ksurat"></span></p>
-                    <p>Nama Dasar Surat: <span id="del_nsurat"></span></p>
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-danger" type="button" data-dismiss="modal"  onclick="delSurID()">Hapus</button>
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Tutup</button>
-                </div>
+<!-- Modal Body -->
+<!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
+<div
+    class="modal fade"
+    id="deleteModal"
+    tabindex="-2"
+    
+    role="dialog"
+    aria-labelledby="Delete Master Dasar Surat Tugas"
+    aria-hidden="true"
+>
+    <div
+        class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg"
+        role="document"
+    >
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title h3" id="modalTitleId">
+                    Melakukan Delete Master Dasar Surat Tugas
+                </h5>
+                <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                ></button>
+            </div>
+            <div class="modal-body">
+                <p>Apakah yakin akan melakukan delete data:</p>
+                <table style="width: 100%;">
+                    <thead>
+                        <th>Kode Master Dasar Surat Tugas:</th>
+                        <th><span id="kodeDeleteDasarST"></span></th>
+                    </thead>
+                    <tr>
+                        <th>Keterangan Dasar Surat Tugas:</th>
+                        <td><span id="keteranganDeleteDasarST"></span></td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="modal-footer">
+                <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-bs-dismiss="modal"
+                >
+                    Close
+                </button>
+                <button type="button" class="btn btn-danger" onclick="deleteNow()">Delete/ Hapus</button>
             </div>
         </div>
     </div>
+</div>
 
 <script>
     let kodenya=null;
-    function deleteDasarSurat(kode,nama) {
-        document.getElementById('del_ksurat').innerText=kode;
-        document.getElementById('del_nsurat').innerText=nama;
+    let keterangan=null;
+    let data={};
+    
+    // function delJabID() {
+    //     document.location.href="/master/jab/del/" +kodenya +"/";
+    // }
+
+    // function deleteJabatan(kode,nama) {
+    //     document.getElementById('del_kjab').innerText=kode;
+    //     document.getElementById('del_njab').innerText=nama;
+    //     kodenya=kode;
+    //     $("#deleteModal").modal('show');
+    // }
+    
+    function editDasarST(kode) {
+        console.log(kode);
+        $("#kodeEditDasarST").text(kode);
+        keterangan = $("#edit" + kode).attr('data-bs-keterangan');
         kodenya=kode;
+        $("#keteranganEditDasarST").text(keterangan);
+        $("#editModal").modal('show');
+    }
+
+    function deleteDasarST(kode) {
+        $("#kodeDeleteDasarST").text(kode);
+        keterangan = $("#del" + kode).attr('data-bs-keterangan');
+        kodenya=kode;
+        $("#keteranganDeleteDasarST").text(keterangan);
         $("#deleteModal").modal('show');
     }
 
-    function delSurID() {
-        document.location.href="/master/sur/del/" +kodenya +"/";
+    function deleteNow() {
+        csrf_token = $("input[name=csrfmiddlewaretoken]").val()
+        data={
+            kodeDasarST:kodenya,
+            method:'delete',
+            csrfmiddlewaretoken:csrf_token
+        };
+        $.ajax({
+            type:'POST',
+            url:'/master/sur/upd/',
+            data:data,
+            success: ()=> {
+                window.location.href='/master/sur/dis/'
+            }
+        });
+    }
+    function updateNow() {
+        csrf_token = $("input[name=csrfmiddlewaretoken]").val();
+        keterangan = $("#keteranganEditBaru").val();
+        console.log(keterangan);
+        data={
+            kodeDasarST:kodenya,
+            keteranganDasarST:keterangan,
+            method:'update',
+            csrfmiddlewaretoken:csrf_token
+        };
+        $.ajax({
+            type:'POST',
+            url:'/master/sur/upd/',
+            data:data,
+            success: ()=> {
+                window.location.href='/master/sur/dis/'
+            }
+        });
     }
 </script>
 
