--- a/templates/login.html
+++ b/templates/login.html
@@ -43,7 +43,7 @@
                                 <div class="p-5">
                                     <div class="text-center">
                                         <div class="d-lg-none shadow" ><img style="width: 100%;border-radius: 10px;" src="{% static 'img/dispenda_kecil.png' %}" alt="Dispenda Semarang"></div>
-                                        <h1 class="h4  mb-4 my-3" style="font-weight: bold;color: black;">SURAT TUGAS DISPENDA</h1>
+                                        <p class="h4  mb-4 my-3" style="font-weight: bold;color: black;">SURAT TUGAS DISPENDA</p>
                                     </div>
                                     <form class="user" method="POST" action="/auth/">
                                         {% csrf_token %}
